fix omp setting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ if(USE_OPENMP)
         endif()
     endif()
 
-    SET(XIUXIAN_WITH_OPENMP true)
+    add_definitions(-DXIUXIAN_WITH_OPENMP)
 endif()
 
 enable_testing()
