build: omp: update cmake for finding omp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,38 +36,28 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 OPTION (USE_OPENMP "Use OpenMP to enamble <omp.h>" ON)
 
+macro(append var value)
+    set(${var} "${${var}} ${value}")
+endmacro()
+
 if(USE_OPENMP)
-    if(APPLE)
-        if(CMAKE_C_COMPILER_ID MATCHES "Clang\$")
-            set(OpenMP_C "${CMAKE_C_COMPILER}")
-            set(OpenMP_C_FLAGS "-Xpreprocessor -fopenmp")
-            set(OpenMP_C_LIB_NAMES "omp")
-            set(OpenMP_omp_LIBRARY ${OpenMP_C_LIB_NAMES})
-        endif()
-        if(CMAKE_CXX_COMPILER_ID MATCHES "Clang\$")
-            set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
-            set(OpenMP_CXX_FLAGS "-Xpreprocessor -fopenmp")
-            set(OpenMP_CXX_LIB_NAMES "omp")
-            set(OpenMP_omp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
-        endif()
-    endif()
-
-    find_package(OpenMP REQUIRED)
-
-    if (NOT CMAKE_VERSION VERSION_LESS 3.9)
-        set(OPENMP_FLAG ${OPENMP_FLAG} OpenMP::OpenMP_CXX) # Requires CMake 3.9+
+    if (APPLE AND CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+        set(_omp_severity "WARNING")
     else()
-        set(OpenMP_C_FOUND true)
-        set(OpenMP_CXX_FOUND true)
-
-        if(OpenMP_CXX_FOUND)
-            set(OPENMP_FLAG ${OPENMP_FLAG} ${OpenMP_CXX_FLAGS})
-            append(CMAKE_C_FLAGS ${OpenMP_C_FLAGS})
-            append(CMAKE_CXX_FLAGS ${OpenMP_CXX_FLAGS})
-        endif()
+        set(_omp_severity "FATAL_ERROR")
     endif()
-
-    add_definitions(-DXIUXIAN_WITH_OPENMP)
+    find_package(OpenMP)
+    if(OpenMP_CXX_FOUND)
+        append(CMAKE_C_FLAGS ${OpenMP_C_FLAGS})
+        append(CMAKE_CXX_FLAGS ${OpenMP_CXX_FLAGS})
+        add_definitions(-DXIUXIAN_WITH_OPENMP)
+        if(MSVC AND CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+            list(APPEND EXTRA_SHARED_LIBS ${OpenMP_CXX_LIBRARIES})
+        endif()
+    else()
+        message(${_omp_severity} "OpenMP library could not be found. "
+            "Proceeding might lead to highly sub-optimal performance.")
+    endif()
 endif()
 
 enable_testing()
